showing the doggo

--- a/app/templates/myPage.html
+++ b/app/templates/myPage.html
@@ -8,6 +8,9 @@
     <form action="" method="post" novalidate>
     {{ form.hidden_tag() }}
         <h1>Rate the dog :)</h1>
+
+        <img src="../static/dog.png" alt="a nice dog" width="400px" height="380px">
+
         <p>
             {{ form.rate_the_dog }}
         </p>
